--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -17,13 +17,11 @@
             <div class="items-center flex flex-wrap">
               <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
                 <div class="pr-12">
-                  <h1 class="text-white font-semibold text-5xl">
-                    Your story starts with us.
+                  <h1 class="text-white font-semibold text-4xl">
+                    Automate Manual Processes
                   </h1>
                   <p class="mt-4 text-lg text-gray-300">
-                    This is a simple example of a Landing Page you can build using
-                    Tailwind Starter Kit. It features multiple CSS components
-                    based on the Tailwindcss design system.
+                    Contact us for top-notch solutions to automate your business processes.
                   </p>
                 </div>
               </div>
@@ -52,25 +50,24 @@
         <section class="pb-20 bg-gray-300 -mt-24">
           <div class="container mx-auto px-4">
             <div class="flex flex-wrap">
-              <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center">
+              <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center ">
                 <div
                   class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
                 >
-                  <div class="px-4 py-5 flex-auto">
+                  <div class="px-4 py-5 flex-auto ">
                     <div
                       class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400"
                     >
-                      <i class="fas fa-award"></i>
+                      <i class="fas fa-award animate-bounce"></i>
                     </div>
-                    <h6 class="text-xl font-semibold">Awarded Agency</h6>
+                    <h6 class="text-xl font-semibold">Topnotch Services</h6>
                     <p class="mt-2 mb-4 text-gray-600">
-                      Divide details about your product or agency work into parts.
-                      A paragraph describing a feature will be enough.
+                      We provide highly reliable service, giving you the reason to always work with us.
                     </p>
                   </div>
                 </div>
               </div>
-              <div class="w-full md:w-4/12 px-4 text-center">
+              <div class="w-full md:w-4/12 px-4 text-center animate-bounce">
                 <div
                   class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
                 >
@@ -80,15 +77,14 @@
                     >
                       <i class="fas fa-retweet"></i>
                     </div>
-                    <h6 class="text-xl font-semibold">Free Revisions</h6>
+                    <h6 class="text-xl font-semibold">Easy to integrate</h6>
                     <p class="mt-2 mb-4 text-gray-600">
-                      Keep you user engaged by providing meaningful information.
-                      Remember that by this time, the user is curious.
+                      Our solutions can easily integrate with any existing system or process.
                     </p>
                   </div>
                 </div>
               </div>
-              <div class="pt-6 w-full md:w-4/12 px-4 text-center">
+              <div class="pt-6 w-full md:w-4/12 px-4 text-center animate-bounce">
                 <div
                   class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
                 >
@@ -96,12 +92,11 @@
                     <div
                       class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-green-400"
                     >
-                      <i class="fas fa-fingerprint"></i>
+                      <i class="fas fa-poll"></i>
                     </div>
-                    <h6 class="text-xl font-semibold">Verified Company</h6>
+                    <h6 class="text-xl font-semibold">Scalable solutions</h6>
                     <p class="mt-2 mb-4 text-gray-600">
-                      Write a few lines about each one. A paragraph describing a
-                      feature will be enough. Keep you user engaged!
+                      We provide scalable and portable user-friendly solutions
                     </p>
                   </div>
                 </div>
@@ -269,11 +264,9 @@
           <div class="container mx-auto px-4">
             <div class="flex flex-wrap justify-center text-center mb-24">
               <div class="w-full lg:w-6/12 px-4">
-                <h2 class="text-4xl font-semibold">Here are our Engineers</h2>
+                <h2 class="text-4xl font-semibold">Our Customer's Testimonies</h2>
                 <p class="text-lg leading-relaxed m-4 text-gray-600">
-                  According to the National Oceanic and Atmospheric
-                  Administration, Ted, Scambos, NSIDClead scentist, puts the
-                  potentially record maximum.
+                  We appreciate customer's feedback, as it helps us improve our products and services.
                 </p>
               </div>
             </div>
@@ -287,27 +280,14 @@
                     style="max-width: 120px;"
                   />
                   <div class="pt-6 text-center">
-                    <h5 class="text-xl font-bold">Ryan Tompson</h5>
+                    <h5 class="text-xl font-bold">Amino</h5>
                     <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-                      Web Developer
+                      Malicious URL Detector
                     </p>
                     <div class="mt-6">
-                      <button
-                        class="bg-blue-400 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                        type="button"
-                      >
-                        <i class="fab fa-twitter"></i></button
-                      ><button
-                        class="bg-blue-600 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                        type="button"
-                      >
-                        <i class="fab fa-facebook-f"></i></button
-                      ><button
-                        class="bg-pink-500 text-white w-8 h-8 rounded-full outline-none focus:outline-none mr-1 mb-1"
-                        type="button"
-                      >
-                        <i class="fab fa-dribbble"></i>
-                      </button>
+                     <p>
+                       "Excellent service.............................................................."
+                     </p>
                     </div>
                   </div>
                 </div>
