--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -76,51 +76,11 @@
           class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden"
           id="example-collapse-navbar"
         >
-          <ul class="flex flex-col lg:flex-row list-none mr-auto">
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://www.creative-tim.com/learning-lab/tailwind-starter-kit#/landing"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 far fa-file-alt text-lg leading-lg mr-2"
-                ></i>
-                Docs</a
-              >
-            </li>
-          </ul>
+          
           <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Share</span></a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Tweet</span></a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Star</span></a
-              >
-            </li>
+           
 
-            <li class="flex items-center">
+            <!-- <li class="flex items-center">
               <a href="/">
               <button
                 class="bg-green-600 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
@@ -133,31 +93,33 @@
               Home
               </button>
             </a>
+            </li> -->
+
+            
+            <li class="flex items-center whitespace-no-wrap  text-white">
+              <a href="/projects"class="border border-transparent text-base px-4 py-2 ">
+              <!-- <button
+                class="bg-red-700 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
+                type="button"
+                style="transition: all 0.15s ease 0s;"
+              > -->
+              <i class="far fa-folder-open"></i> Projects
+              <!-- </button> -->
+            </a>
             </li>
 
-            <li class="flex items-center">
-              <a href="/about">
-              <button
+            <li class="flex items-center whitespace-no-wrap  text-grey">
+              <a href="/about" class="px-4 py-2">
+              <!-- <button
                 class="bg-yellow-600 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
                 type="button"
                 style="transition: all 0.15s ease 0s;"
-              >
+              > -->
               
                 <i class="fas fa-building"></i> 
               
               About Us
-              </button>
-            </a>
-            </li>
-            <li class="flex items-center">
-              <a href="/projects"class="border border-transparent text-base  ">
-              <button
-                class="bg-red-700 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
-                type="button"
-                style="transition: all 0.15s ease 0s;"
-              >
-              <i class="far fa-folder-open"></i> Projects
-              </button>
+              <!-- </button> -->
             </a>
             </li>
             
@@ -212,30 +174,31 @@
           <div class="w-full lg:w-6/12 px-4">
             <h4 class="text-3xl font-semibold">Let's keep in touch!</h4>
             <h5 class="text-lg mt-0 mb-2 text-gray-700">
-              Find us on any of these platforms, we respond 1-2 business days.
+              Follow us on socials to stay updated.
             </h5>
             <div class="mt-6">
               <button
                 class="bg-white text-blue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
                 type="button"
               >
-                <i class="flex fab fa-twitter"></i></button
+                <a href="https://twitter.com/nuraltech?lang=en">
+                  <i class="flex fab fa-twitter"></i>
+                </a>
+                </button
               ><button
                 class="bg-white text-blue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
                 type="button"
-              >
-                <i class="flex fab fa-facebook-square"></i></button
+              ><a href="https://www.facebook.com/nuraltech">
+                <i class="flex fab fa-facebook-square"></i>
+              </a></button
               ><button
                 class="bg-white text-pink-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
                 type="button"
               >
-                <i class="flex fab fa-dribbble"></i></button
-              ><button
-                class="bg-white text-gray-900 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-                type="button"
+              <a href="https://www.instagram.com/nuraltech">
+                <i class="flex fab fa-instagram"></i>
+              </a></button
               >
-                <i class="flex fab fa-github"></i>
-              </button>
             </div>
           </div>
           <div class="w-full lg:w-6/12 px-4">
@@ -243,37 +206,28 @@
               <div class="w-full lg:w-4/12 px-4 ml-auto">
                 <span
                   class="block uppercase text-gray-600 text-sm font-semibold mb-2"
-                  >Useful Links</span
+                  >Contact Us</span
                 >
                 <ul class="list-unstyled">
                   <li>
-                    <a
-                      class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://www.creative-tim.com/presentation"
-                      >About Us</a
+                    <b>+234 810 753 0562</b
                     >
                   </li>
                   <li>
-                    <a
-                      class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://blog.creative-tim.com"
-                      >Blog</a
+                    <b>+234 901 840 4725</b
                     >
                   </li>
                   <li>
-                    <a
-                      class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://www.github.com/creativetimofficial"
-                      >Github</a
+                    <b>+234 803 131 3555</b
                     >
                   </li>
                   <li>
-                    <a
-                      class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://www.creative-tim.com/bootstrap-themes/free"
-                      >Free Products</a
+                    <a href="mailto:info@nuraltech.com">info@nuraltech.com</a
                     >
                   </li>
+                  
+                 
+                  
                 </ul>
               </div>
               <div class="w-full lg:w-4/12 px-4">
@@ -282,31 +236,25 @@
                   >Other Resources</span
                 >
                 <ul class="list-unstyled">
+                  
                   <li>
                     <a
                       class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://github.com/creativetimofficial/argon-design-system/blob/master/LICENSE.md"
-                      >MIT License</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://creative-tim.com/terms"
+                      href="https://nuraltec/terms"
                       >Terms &amp; Conditions</a
                     >
                   </li>
                   <li>
                     <a
                       class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://creative-tim.com/privacy"
+                      href="https://nuraltec.com/privacy"
                       >Privacy Policy</a
                     >
                   </li>
                   <li>
                     <a
                       class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                      href="https://creative-tim.com/contact-us"
+                      href="/contact-us"
                       >Contact Us</a
                     >
                   </li>
@@ -321,7 +269,7 @@
         >
           <div class="w-full md:w-4/12 px-4 mx-auto text-center">
             <div class="text-sm text-gray-600 font-semibold py-1">
-              Copyright © 2020 NuralTec
+              Copyright © 2021
               <a
                 href="https://www.creative-tim.com"
                 class="text-gray-600 hover:text-gray-900"
