--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -60,6 +60,7 @@
         <div
           class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start"
         >
+        
           <a
             class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white"
             href="/"
@@ -80,7 +81,7 @@
           <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
            
 
-            <!-- <li class="flex items-center">
+            <li class="flex items-center text-white">
               <a href="/">
               <button
                 class="bg-green-600 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
@@ -93,33 +94,33 @@
               Home
               </button>
             </a>
-            </li> -->
+            </li>
 
             
-            <li class="flex items-center whitespace-no-wrap  text-white">
-              <a href="/projects"class="border border-transparent text-base px-4 py-2 ">
-              <!-- <button
+            <li class="flex items-center text-white">
+              <a href="/projects">
+              <button
                 class="bg-red-700 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
                 type="button"
                 style="transition: all 0.15s ease 0s;"
-              > -->
+              >
               <i class="far fa-folder-open"></i> Projects
-              <!-- </button> -->
+              </button>
             </a>
             </li>
 
-            <li class="flex items-center whitespace-no-wrap  text-grey">
-              <a href="/about" class="px-4 py-2">
-              <!-- <button
+            <li class="flex items-center text-white">
+              <a href="/about">
+              <button
                 class="bg-yellow-600 text-center font-bold rounded-md text-white hover:text-green-850 px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
                 type="button"
                 style="transition: all 0.15s ease 0s;"
-              > -->
+              >
               
                 <i class="fas fa-building"></i> 
               
               About Us
-              <!-- </button> -->
+              </button>
             </a>
             </li>
             
