--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -49,6 +49,7 @@
         </div>
         <section class="pb-20 bg-gray-300 -mt-24">
           <div class="container mx-auto px-4">
+            <!-- start -->
             <div class="flex flex-wrap">
               <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center ">
                 <div
@@ -102,6 +103,7 @@
                 </div>
               </div>
             </div>
+            <!-- stop -->
             <div class="flex flex-wrap items-center mt-32">
               <div class="w-full md:w-5/12 px-4 mr-auto ml-auto">
                 <div
